May fix layout issue on iOS Safari by not using 100vh

--- a/compare.css
+++ b/compare.css
@@ -1,19 +1,22 @@
-﻿body
+﻿html,body
 {
     margin          : 0px;
     padding         : 0px;
+    height          : 100%;
+    min-height      : 100%;
 }
 #viewroot
 {
     display         : flex;
     width           : 100%;
+    height          : 100%;
 }
 #sidebar
 {
     position        : relative;
     background-color: #666;
     width           : 60px;
-    height          : 100vh;
+    height          : 100%;
     overflow        : auto;
 }
 #sidebar > div
@@ -62,7 +65,7 @@
     flex            : 1 1 auto;
     display         : flex;
     background-color: #444;
-    height          : 100vh;
+    height          : 100%;
 }
 #view .imageBox, #view .emptyBox
 {
